# ai-sales-table

./: README.md
backend/: .env  check_columns.py  check_db.py  check_rows.py  clear_db.py  data.db  data.sqlite  fly.toml  init_db.py  pyproject.toml  requirements.txt  schema_test.py  setup.py  start.sh  test_extraction.py  test_firecrawl.py  test_websocket.py  verify_db.py
backend/app/: database.py  firecrawl.py  main.py  models.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: column-form.tsx  data-grid.tsx
frontend/src/components/ui/: table.tsx
frontend/src/lib/: api.ts
frontend/src/test/: api-test.ts
